fix onShift, add absend, add submit

--- a/src/app/dashboard/widgets/change-shift/change-shift.component.scss
+++ b/src/app/dashboard/widgets/change-shift/change-shift.component.scss
@@ -303,7 +303,7 @@
       }
 
       &__name {
-        font-size: 20px; //?
+        font-size: 20px;
         color: var(--color-text-main);
         margin-bottom: 15px;
       }
@@ -327,7 +327,6 @@
 
   &__onShift {
     width: 100%;
-    height: 20%;
     border-top: 0.5px solid var(--color-border-main-transparrent);
     display: flex;
     flex-direction: column;
@@ -335,6 +334,7 @@
     position: relative;
     box-sizing: border-box;
     padding-top: 15px;
+    margin-bottom: 10px;
 
     .onShift {
       &__label {
@@ -347,14 +347,17 @@
 
       &__people {
         width: 100%;
-        height: 100%;
+        height: 180px;
         display: inline-flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
+        overflow: auto;
+        box-sizing: border-box;
+        padding: 3px 0 0;
       }
 
       &__person {
-        width: 140px;
+        width: 130px;
         height: 70px;
         margin-top: 20px;
         display: inline-flex;
@@ -363,6 +366,7 @@
         font-size: 7px;
         box-sizing: border-box;
         padding-top: 5px;
+        margin: 0 7px 20px;
 
         .person {
           display: flex;
@@ -459,6 +463,276 @@
                 background-color: #333333;
               }
             }
+          }
+        }
+      }
+    }
+
+    .absent {
+      &__people {
+        height: 90px;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  &__absent {
+    width: 100%;
+    border-top: 0.5px solid var(--color-border-main-transparrent);
+    border-bottom: 0.5px solid var(--color-border-main-transparrent);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+    box-sizing: border-box;
+    padding-top: 15px;
+    margin-bottom: 10px;
+
+    .absent {
+      &__label {
+        position: absolute;
+        top: -8px;
+        left: 0;
+        padding-right: 10px;
+        background-color: var(--color-bg-main);
+      }
+
+      &__people {
+        width: 100%;
+        display: inline-flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        overflow: auto;
+        box-sizing: border-box;
+        padding: 3px 0 0;
+        height: 90px;
+        margin-bottom: 10px;
+      }
+
+      &__person {
+        width: 130px;
+        height: 70px;
+        margin-top: 20px;
+        display: inline-flex;
+        position: relative;
+        border-top: 0.5px dashed var(--color-border-main-transparrent);
+        font-size: 7px;
+        box-sizing: border-box;
+        padding-top: 5px;
+        margin: 0 7px 20px;
+
+        .person {
+          display: flex;
+          &__avatar {
+            flex-basis: 40%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: left;
+            box-sizing: border-box;
+            border-bottom: 0.5px dashed var(--color-border-main-transparrent);
+            position: relative;
+
+            &::before {
+              z-index: 10;
+              content: "";
+              position: absolute;
+
+              bottom: -2px;
+              right: 0px;
+
+              height: 4px;
+              width: 13px;
+
+              box-sizing: border-box;
+              background: var(--color-bg-main);
+            }
+          }
+
+          &__img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #333333;
+          }
+
+          &__info {
+            flex-basis: 60%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+          }
+
+          &__name {
+            color: var(--color-text-main);
+            font-size: 9px;
+          }
+
+          &__position {
+            color: var(--color-text-sub);
+          }
+
+          &__place {
+            color: var(--color-text-sub-heading);
+          }
+
+          &__status {
+            display: inline-flex;
+            justify-content: space-between;
+            box-sizing: border-box;
+            padding-top: 3px;
+            border-top: 0.5px dashed var(--color-border-main-transparrent);
+            position: relative;
+
+            &::before {
+              z-index: 1;
+              content: "";
+              position: absolute;
+
+              top: 7px;
+              left: -18px;
+
+              height: 1px;
+              width: 20px;
+
+              box-sizing: border-box;
+              transform-origin: 43% 0;
+              transform: rotate(-40deg);
+
+              border-bottom: 0.5px dashed var(--color-border-main-transparrent);
+              background: transparent;
+            }
+
+            .status {
+              &__name {
+                color: var(--color-text-main);
+              }
+              &__icon {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: #333333;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &__submit {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    button {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      border: 0.5px solid var(--color-border-main-transparrent);
+      background-color: var(--color-bg-main);
+      color: var(--color-text-main);
+      outline: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .submit {
+      &__frame {
+        position: absolute;
+        z-index: 1;
+        height: 100%;
+        width: 20px;
+        border: 2px solid var(--color-border-active);
+        box-sizing: border-box;
+        background: transparent;
+        &-left {
+          left: 0px;
+          top: 0px;
+          border-right: none;
+
+          &:before {
+            z-index: 1;
+            content: "";
+            position: absolute;
+
+            top: -2px;
+            left: -7px;
+
+            height: 7px;
+            width: 10px;
+
+            box-sizing: border-box;
+            transform-origin: 43% 0;
+            transform: rotate(-45deg);
+
+            border-bottom: 2px solid var(--color-border-active);
+            background: var(--color-bg-main);
+          }
+
+          &:after {
+            z-index: 1;
+            content: "";
+            position: absolute;
+
+            bottom: -4px;
+            left: -2px;
+
+            height: 7px;
+            width: 10px;
+
+            box-sizing: border-box;
+            transform-origin: 43% 0;
+            transform: rotate(45deg);
+
+            border-top: 2px solid var(--color-border-active);
+            background: var(--color-bg-main);
+          }
+        }
+        &-right {
+          right: 0px;
+          top: 0px;
+          border-left: none;
+
+          &:before {
+            z-index: 1;
+            content: "";
+            position: absolute;
+
+            top: -3px;
+            right: -7px;
+
+            height: 7px;
+            width: 10px;
+
+            box-sizing: border-box;
+            transform-origin: 43% 0;
+            transform: rotate(45deg);
+
+            border-bottom: 2px solid var(--color-border-active);
+            background: var(--color-bg-main);
+          }
+
+          &:after {
+            z-index: 1;
+            content: "";
+            position: absolute;
+
+            bottom: -8px;
+            right: -2px;
+
+            height: 10px;
+            width: 10px;
+
+            box-sizing: border-box;
+            transform-origin: 43% 0;
+            transform: rotate(-45deg);
+
+            border-top: 2px solid var(--color-border-active);
+            background: var(--color-bg-main);
           }
         }
       }
